Migrate cli to rust + JVM & S3 Optimization